# ai-release-automation

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SETUP_GUIDE.md  auto_commit.py  demo_complete_workflow.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_release_system.py
docs/: ARCHITECTURE.md  IMPLEMENTATION_ROADMAP.md  RELEASE_SYSTEM_SUMMARY.md
examples/config/: simple_project.yaml
examples/integrations/: github_actions.yml
examples/workflows/: basic_release.py
release_system/: README.md  __init__.py
release_system/cli/: __init__.py
release_system/config/: default.yaml
release_system/core/: __init__.py  ai_generator.py  git_analyzer.py  release_chain.py  version_manager.py
release_system/standards/: commit_conventions.yaml
release_system/workflows/: commit_chain.py
tests/fixtures/: sample_commits.json
